--- a/pages/_quarto.yml
+++ b/pages/_quarto.yml
@@ -3,13 +3,15 @@ project:
   output-dir: ../docs
 
 website:
-  title: "Northern Ireland Greenhouse Gas Inventory 1990-2022"
+  title: Northern Ireland Greenhouse Gas Inventory 1990-2022
   search: false
   navbar:
     logo: img/A4_DAERA_Logo_White_Out.png
+    logo-alt: DAERA logo
     left:
       - href: index.qmd
         text: HOME
+        icon: bi-house-door-fill
       - text: SECTOR EMISSIONS
         menu:
           - text: Northern Ireland
@@ -32,10 +34,13 @@ website:
             href: waste.qmd
       - href: comparisons.qmd
         text: COMPARISONS
+        icon: bi-bar-chart-fill
       - href: explore.qmd
         text: EXPLORE
+        icon: bi-grid-3x3-gap-fill
       - href: user-notes.qmd
         text: USER NOTES
+        icon: bi-clipboard-minus
 
 format:
   dashboard:
@@ -43,5 +48,5 @@ format:
     fig-responsive: true
     include-in-header: 
       text: |
-        <link rel="icon" type="image" href="/img/fav-icon-daera.svg"/>
+        <link rel="icon" type="image" href="img/favicon-daera.svg"/>
     
